# ThirdLaboratoryDictionary2

./: .gitignore  CMakeLists.txt  Readme.txt  code.c  fileToConflict.txt  fix.cpp
Declaration/Cache/: LRUCache.h
Declaration/Dictionary/: PrintDictionary.h
Declaration/Functions/: Comporators.h  SetRandomInt.h
Declaration/GetHashCodes/: GetHashCode.h
Declaration/Sequence/: LinkedList.h  PrintArray.h  PrintList.h
Declaration/TypesOfData/: MyString.h  Person.h  ReturnValue.h
Definition/: main.cpp
Definition/Functions/: SetRandomInt.cpp
Definition/GetHashCodes/: GetHashCode.cpp
Definition/TypesOfData/: Comporators.cpp  MyString.cpp  Person.cpp
Plot/: CMakeLists.txt
Plot/Declaration/: realtimeplot.h
Plot/Definition/: realtimeplot.cpp
Qt/GUI_Cache/: Abs.cpp  Abs.h  ArraySequence.h  CMakeLists.txt  Dictionary.h  DynamicArray.h  GenerateArraySequencePerson.cpp  GenerateArraySequencePerson.h  GenerateListSequencePerson.cpp  GenerateListSequencePerson.h  GetHashCode.cpp  GetHashCode.h  GetNamesAndSournamesToMyString.cpp  GetNamesAndSournamesToMyString.h  GetPerson.cpp  GetQstringFromNewWidget.cpp  LRUCacheCopy.h  LinkedList.h  ListSequence.h  MyString.cpp  MyString.h  Pair.h  Person.cpp  PrintSeq.h  Sequence.h  UIClass.cpp  UIClass.h  main.cpp
Qt/GUI_Dictionary/: CMakeLists.txt  StartUI.cpp  StartUI.h  checkqstring.cpp  checkqstring.h  checkqstringkey.cpp  checkqstringkey.h  directorytablemodel.cpp  directorytablemodel.h  enumclass.cpp  enumclass.h  gethashqstring.cpp  gethashqstring.h  main.cpp  memberofmodel.cpp  memberofmodel.h  syntaxhighlighter.cpp  uiclass.cpp  uiclass.h
Tests/LoadTests/: CMakeLists.txt
Tests/LoadTests/Declaration/: LoadTestsInt.h
Tests/LoadTests/Definition/: LoadTestsInt.cpp
Tests/UnitTests/Declaration/: UnitTests.h
Tests/UnitTests/Definition/: UnitTests.cpp
